improve cli interface and usability
- restructure commands with subcommands (analyze, config, info)
- add required option validation and better help text
- add --no-layers option to skip layer analysis
- implement backward compatibility for old syntax
- add npm scripts for common operations
- update README with new command examples

--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Analyze Docker Hub repositories and extract insights",
   "main": "analyzer.js",
   "scripts": {
-    "start": "node analyzer.js",
+    "start": "node analyzer.js info",
+    "analyze": "node analyzer.js analyze",
+    "config": "node analyzer.js config",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "dockerhub-analyzer": "./analyzer.js"
   },
   "keywords": [
     "docker",
